test/field/call_nonfunction_field.lox
struct Foo {}

var foo = Foo()
foo.bar = "not fn"

foo.bar() // error: can only call functions and structures
